# PaintLatexQt

./: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  PaintLatexQt_global.h  paintlatexqt.cpp  paintlatexqt.h  paintlatexqtfgetsetter.cpp
test/: CMakeLists.txt  main.cpp  test.aux  test.tex  testpaint.cpp  testpaint.h
